--- a/index.html
+++ b/index.html
@@ -5,6 +5,76 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Digitale Speisekarten per QR-Code</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f0f4f8;
+            color: #333;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background-color: #2c3e50;
+            color: #ffffff;
+            text-align: center;
+            padding: 20px 0;
+        }
+        .company-name {
+            font-size: 24px;
+            font-weight: bold;
+            color: #ffffff;
+            margin-bottom: 5px;
+        }
+        .about, .benefits, .contact, .motivation, .pricing {
+            max-width: 800px;
+            margin: 40px auto;
+            background: #ffffff;
+            padding: 20px;
+            border-radius: 10px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+        h2 {
+            color: #2980b9;
+        }
+        ul {
+            list-style-type: none;
+            padding: 0;
+        }
+        li {
+            background: #ecf0f1;
+            margin: 10px 0;
+            padding: 10px;
+            border-left: 5px solid #2980b9;
+        }
+        .cta {
+            display: inline-block;
+            background: #2980b9;
+            color: white;
+            padding: 10px 20px;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background 0.3s ease;
+            cursor: pointer;
+        }
+        .cta:hover {
+            background: #1c6ea4;
+        }
+        footer {
+            background-color: #2c3e50;
+            color: white;
+            text-align: center;
+            padding: 10px 0;
+            margin-top: 40px;
+        }
+        .contact-info {
+            display: none;
+            margin-top: 20px;
+            padding: 15px;
+            background: #ecf0f1;
+            border-radius: 10px;
+            text-align: center;
+        }
+    </style>
     <script>
         function showContactInfo() {
             document.getElementById('contact-info').style.display = 'block';
@@ -25,7 +95,9 @@
     
     <section class="motivation">
         <h2>Unsere Motivation</h2>
-        <p>Die Idee für GastroConnect entstand aus persönlicher Erfahrung...</p>
+        <p>Die Idee für GastroConnect entstand aus persönlicher Erfahrung. Bereits im Sommer 2016, zu Beginn meiner Ausbildung, wurde mir bewusst, wie aufwendig es ist, traditionelle Speisekarten zu pflegen, zu aktualisieren und stets in ausreichender Menge bereitzuhalten. Besonders im Terrassengeschäft während der Sommermonate oder bei außerplanmäßigen Veranstaltungen stellte dies oft eine Herausforderung dar.</p>
+        <p>Im Laufe der Jahre und durch die zahlreichen Erfahrungen, die ich sammeln durfte, begegnete mir dieses Problem immer wieder: Es gibt zu wenige Speisekarten, Preise müssen ständig angepasst werden, alte Karten müssen eingesammelt und neue verteilt werden. Hinzu kommt, dass Speisekarten im Außenbereich schnell nass werden oder einfach unhandlich sind, was für das Personal zusätzliche Laufwege und eine enorme Belastung bedeutet.</p>
+        <p>Mit GastroConnect habe ich eine Lösung geschaffen, die all diese Probleme beseitigt. Durch die Digitalisierung der Speisekarten mit QR-Codes ermöglichen wir eine moderne, effiziente und nachhaltige Alternative, die sowohl für Gastronomen als auch für Gäste zahlreiche Vorteile bietet.</p>
     </section>
     
     <section class="benefits">
@@ -67,3 +139,4 @@
     </footer>
 </body>
 </html>
+
